# ACIiL

./: .gitignore  CMakeLists.txt  README.md
aciil_dyn/: .gitignore  Makefile  checkpoint.c  cr.h  restart.c  simple  simple.c  simple2.c  vecadd.c
acriil_dyn/: .gitignore  ACRIiLState.cpp  Makefile  checkpoint.c  checkpoint.cpp  checkpointRestart.h  cr.h  jacobi-malloc.c  jacobi.c  restart.c  restart.cpp  simple2.c  vecadd.c  vecadd_ptrswp.c
include/: ACIiL.h
include/ACIiL/: CFGFunction.h  CFGNode.h  CFGOperand.h  CFGUtils.h
include/llvm/: InitializePasses.h
include/llvm/Transforms/: ACIiL.h  ACRIiL.h
include/llvm/Transforms/ACIiL/: ACIiLAllocaManager.h  ACRIiLPointerAlias.h  CFGEdge.h  CFGFunction.h  CFGModule.h  CFGNode.h  CFGOperand.h  CFGUse.h  CFGUtils.h  FunctionCFG.h  ModuleCFG.h
include/llvm/Transforms/ACRIiL/: ACRIiLAllocaManager.h  ACRIiLUtils.h  CFGFunction.h  CFGModule.h  CFGNode.h  CFGUse.h  CFGUtils.h
lib/Transforms/: CMakeLists.txt  LLVMBuild.txt
lib/Transforms/ACIiL/: ACIiLAllocaManager.cpp  ACRIiLPointerAlias.cpp  CFGEdge.cpp  CFGFunction.cpp  CFGModule.cpp  CFGNode.cpp  CFGOperand.cpp  CFGUse.cpp  CFGUtils.cpp  CMakeLists.txt  FunctionCFG.cpp  LLVMBuild.txt  ModuleCFG.cpp  aciil.cpp
lib/Transforms/ACRIiL/: ACRIiLAllocaManager.cpp  ACRIiLPointerAlias.cpp  ACRIiLUtils.cpp  CFGFunction.cpp  CFGModule.cpp  CFGNode.cpp  CFGUse.cpp  CFGUtils.cpp  CMakeLists.txt  LLVMBuild.txt  acriil.cpp
lib/Transforms/IPO/: LLVMBuild.txt  PassManagerBuilder.cpp
src/: CFGNode.cpp  CMakeLists.txt  aciil.cpp
